# snake

./: CMakeLists.txt
src/: main.cc
